[gd_scene load_steps=6 format=3 uid="uid://tdp06ku87egs"]

[ext_resource type="Script" uid="uid://cn7macchuwmn2" path="res://scripts/ui/start_menu.gd" id="1_h61rw"]
[ext_resource type="Texture2D" uid="uid://c32px6fuhdsuf" path="res://assets/ui/start_screen_background.png" id="1_ouf4f"]
[ext_resource type="Texture2D" uid="uid://cs8o1afhrx4nc" path="res://assets/ui/button_start.png" id="2_m7x51"]
[ext_resource type="Texture2D" uid="uid://bo7hfvrt5w4cn" path="res://assets/ui/button_credits.png" id="3_h61rw"]
[ext_resource type="Texture2D" uid="uid://cer2fp2cp8i2k" path="res://assets/ui/screen_credits.png" id="5_fcv5n"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_h61rw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ouf4f")

[node name="ButtonStart" type="TextureButton" parent="CanvasLayer"]
offset_left = 1388.0
offset_top = 740.0
offset_right = 1888.0
offset_bottom = 904.0
scale = Vector2(0.84, 0.84)
texture_normal = ExtResource("2_m7x51")
ignore_texture_size = true

[node name="ButtonCredits" type="TextureButton" parent="CanvasLayer"]
offset_left = 1388.0
offset_top = 898.00006
offset_right = 1888.0
offset_bottom = 1062.0
scale = Vector2(0.84, 0.84)
texture_normal = ExtResource("3_h61rw")
ignore_texture_size = true

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer"]
visible = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fcv5n")
expand_mode = 1

[connection signal="pressed" from="CanvasLayer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="gui_input" from="CanvasLayer/CanvasLayer/TextureRect" to="." method="_on_texture_rect_gui_input"]
